add dev-master alias

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
     "asset-installer-paths": {
       "npm-asset-library": "vendor/npm",
       "bower-asset-library": "vendor/bower"
+    },
+    "branch-alias": {
+      "dev-master": "master"
     }
   }
 }
