--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,6 @@
 build:
     environment:
-        php:
-            version: 7.0
+        php: '7.1.6'
     dependencies:
         before:
             - composer global require "fxp/composer-asset-plugin:~1.3.1"
